--- a/tasks/vms_sequential.yml
+++ b/tasks/vms_sequential.yml
@@ -163,8 +163,10 @@
               or vmware_provisioner_vm_uuid_exists | bool
               or vm.is_template
                  | default(vmware_provisioner_vm_is_template)
-              or vm.state | default(vmware_provisioner_vm_state)
-                 not in ["absent", "present"])
+              or vm.state | default(vmware_provisioner_vm_state) != "present")
+              or not vm.manage_disk
+                 | default(vmware_provisioner_vm_manage_disk)
+                 | bool)
              | ternary(omit,
                        [(vm.disk
                          | default(vmware_provisioner_vm_disk)).0
