Fixed templating error.

--- a/tasks/vms_disks_sequential.yml
+++ b/tasks/vms_disks_sequential.yml
@@ -37,7 +37,7 @@
       register: vmware_provisioner_vms_disks_setup_result
       when:
         - vm.state | default(vmware_provisioner_vm_state) == "present"
-        - vm.manage_disk | default(vmware_provisioner_vm_manage_disk | bool
+        - vm.manage_disk | default(vmware_provisioner_vm_manage_disk) | bool
       loop: "{{ vmware_provisioner_vms_to_manage }}"
       loop_control:
         loop_var: vm
