Remove `latest` requirement for some packages.
Related to ansible/playbooks/linux#109 and ansible/roles/amtega.mysql#15
 Coding standards.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,16 +8,16 @@ galaxy_info:
   description: Setup VMware virtual machines
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.10
+  min_ansible_version: "2.10"
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
+        - "7"
+        - "8"
     - name: Fedora
       versions:
-        - 34
-        - 35
+        - "34"
+        - "35"
   galaxy_tags:
     - vmware
     - system
@@ -47,8 +47,8 @@ dependencies:
       packages_python:
         all:
           all:
-            requests: latest
-            urllib3: latest
+            requests: present
+            urllib3: present
     when: not vmware_provisioner_deps_resolved | default(false)
 
   - role: amtega.select_hostvars
