--- a/tasks/vms_attrs.yml
+++ b/tasks/vms_attrs.yml
@@ -1,9 +1,8 @@
 ---
-# Setup vmware vms attributes
 
-- block:
-    - include_tasks: >-
-        vms_attrs_{{ vmware_provisioner_vms_provisioning_method }}.yml
+- name: Setup vmware vms attributes
+  ansible.builtin.include_tasks: >-
+    vms_attrs_{{ vmware_provisioner_vms_provisioning_method }}.yml
   tags:
     - role::vmware_provisioner
     - role::vmware_provisioner::vms
