--- a/tasks/vms_disks_sequential.yml
+++ b/tasks/vms_disks_sequential.yml
@@ -1,7 +1,7 @@
 ---
-# Setup vmware vms disks sequentiallly
 
-- block:
+- name: Sequential vmware virtual machines disks setup
+  block:
     - name: Sequential vmware virtual machines disks setup
       vmware_guest_disk:
         datacenter: >-
@@ -56,7 +56,7 @@
              | default({}) }}
 
     - name: Check vmware virtual machines disks setup
-      assert:
+      ansible.builtin.assert:
         that: >-
             vmware_provisioner_vms_disks_setup_result.results[vm_index]
             is success
