--- a/tasks/vms_facts_basic.yml
+++ b/tasks/vms_facts_basic.yml
@@ -1,7 +1,7 @@
 ---
-# Get current vmware vms fact
 
-- block:
+- name: Gather basic vmware virtual machines facts
+  block:
     - name: Gather basic vmware virtual machines facts from vCenter
       vmware_vm_info:
         hostname: "{{ vmware_provisioner_vcenter_item }}"
@@ -25,7 +25,7 @@
              | default({}) }}
 
     - name: Setup fact with vmware virtual machines gathered basic facts
-      set_fact:
+      ansible.builtin.set_fact:
         vmware_provisioner_vms_basic_facts: >-
           {{ vmware_provisioner_vms_basic_facts_result.results
              | map(attribute="virtual_machines")
