--- a/tasks/clusters_info.yml
+++ b/tasks/clusters_info.yml
@@ -1,9 +1,9 @@
 ---
-# Get clusters info
 
-- block:
+- name: Gather vmware clusters info
+  block:
     - name: Gather vmware clusters info from vCenter
-      uri:
+      ansible.builtin.uri:
         url: >-
           {{ "https://"
              + vmware_provisioner_datacenter.hostname
@@ -64,7 +64,7 @@
                | default({}) }}
 
     - name: Setup fact with vmware clusters
-      set_fact:
+      ansible.builtin.set_fact:
         vmware_provisioner_clusters_info: >-
           {{ lookup("template", "clusters_info.yml.j2") | from_yaml }}
 
