--- a/tasks/folders_info.yml
+++ b/tasks/folders_info.yml
@@ -1,7 +1,7 @@
 ---
-# Get datastores info
 
-- block:
+- name: Gather vmware folders info
+  block:
     - name: Gather vmware folders info from vCenter
       vmware_folder_info:
         datacenter: "{{ vmware_provisioner_datacenter_item.name }}"
@@ -27,7 +27,7 @@
                 | default({}) }}
 
     - name: Setup fact with vmware folders
-      set_fact:
+      ansible.builtin.set_fact:
         vmware_provisioner_folders_info: >-
           {{ lookup("template", "folders_info.yml.j2") | from_yaml }}
 
